[gd_scene load_steps=4 format=3 uid="uid://ec5sx6bspivh"]

[ext_resource type="Script" path="res://player/attacks/alt_bullet_charged.gd" id="1_6kg6q"]

[sub_resource type="Curve" id="Curve_ek3x6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3
metadata/_snap_enabled = true

[sub_resource type="Gradient" id="Gradient_svf2k"]
offsets = PackedFloat32Array(0, 0.55, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0)
metadata/_snap_enabled = true
metadata/_snap_count = 20

[node name="alt_bullet_charged" type="Area2D"]
top_level = true
scale = Vector2(2, 2)
script = ExtResource("1_6kg6q")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
position = Vector2(2, -2)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
speed_scale = 2.0
explosiveness = 0.75
fixed_fps = 240
local_coords = true
direction = Vector2(-1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ek3x6")
color = Color(0.196078, 2.1098, 2.54902, 1)
color_ramp = SubResource("Gradient_svf2k")

[node name="CPUParticles2D2" type="CPUParticles2D" parent="."]
position = Vector2(-2, -2)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
speed_scale = 2.0
explosiveness = 0.75
fixed_fps = 240
local_coords = true
direction = Vector2(1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ek3x6")
color = Color(0.196078, 2.1098, 2.54902, 1)
color_ramp = SubResource("Gradient_svf2k")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="."]
position = Vector2(-2, 2)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
speed_scale = 2.0
explosiveness = 0.75
fixed_fps = 240
local_coords = true
direction = Vector2(1, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ek3x6")
color = Color(0.196078, 2.1098, 2.54902, 1)
color_ramp = SubResource("Gradient_svf2k")

[node name="CPUParticles2D4" type="CPUParticles2D" parent="."]
position = Vector2(2, 2)
emitting = false
amount = 20
lifetime = 0.4
one_shot = true
speed_scale = 2.0
explosiveness = 0.75
fixed_fps = 240
local_coords = true
direction = Vector2(-1, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 500.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
angle_min = -180.0
angle_max = 180.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_ek3x6")
color = Color(0.196078, 2.1098, 2.54902, 1)
color_ramp = SubResource("Gradient_svf2k")

[node name="Area2D" type="Area2D" parent="." groups=["player_attack"]]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
polygon = PackedVector2Array(-20, 0, -74, -52.5, -100.5, -82, -121.5, -114, -139, -138.5, -70, -90, -20.5, -41, 0, -16, 0, 0)

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-4, 4)
rotation = 1.5708
polygon = PackedVector2Array(-20, 0, -74, -52.5, -100.5, -82, -121.5, -114, -139, -138.5, -70, -90, -20.5, -41, 0, -16, 0, 0)

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(-4, -4)
rotation = 3.14159
polygon = PackedVector2Array(-20, 0, -74, -52.5, -100.5, -82, -121.5, -114, -139, -138.5, -70, -90, -20.5, -41, 0, -16, 0, 0)

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2(4, -4)
rotation = -1.5708
polygon = PackedVector2Array(-20, 0, -74, -52.5, -100.5, -82, -121.5, -114, -139, -138.5, -70, -90, -20.5, -41, 0, -16, 0, 0)

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
